{
  "version": 4,
  "terraform_version": "1.4.5",
  "serial": 82,
  "lineage": "04ebc509-93fc-b76b-f816-f29d765e0769",
  "resources": [
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05bf64a498645b7a6",
            "domain": "vpc",
            "id": "eipalloc-05bf64a498645b7a6",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-209-0-194.compute-1.amazonaws.com",
            "public_ip": "3.209.0.194",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "base_Igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862298378590:internet-gateway/igw-023f38f1e4b7aa573",
            "id": "igw-023f38f1e4b7aa573",
            "owner_id": "862298378590",
            "vpc_id": "vpc-00c153cbf9625ea0c"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.base_vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05bf64a498645b7a6",
            "association_id": "eipassoc-036cbbccc4402bf52",
            "connectivity_type": "public",
            "id": "nat-000ed35578d2188a8",
            "network_interface_id": "eni-0560e4384cfb28f3c",
            "private_ip": "10.0.1.85",
            "public_ip": "3.209.0.194",
            "subnet_id": "subnet-01351679edd75ae49",
            "tags": {
              "Name": "nat_gateway"
            },
            "tags_all": {
              "Name": "nat_gateway"
            }
          },
          "dependencies": [
            "module.aws_vpc.aws_eip.nat_gateway",
            "module.aws_vpc.aws_subnet.PublicSubnet1",
            "module.aws_vpc.aws_vpc.base_vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PrivateRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862298378590:route-table/rtb-05d77dad8120369ba",
            "id": "rtb-05d77dad8120369ba",
            "owner_id": "862298378590",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-000ed35578d2188a8",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00c153cbf9625ea0c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_eip.nat_gateway",
            "module.aws_vpc.aws_nat_gateway.nat_gateway",
            "module.aws_vpc.aws_subnet.PublicSubnet1",
            "module.aws_vpc.aws_vpc.base_vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PublicRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862298378590:route-table/rtb-0b13424f4882b3d72",
            "id": "rtb-0b13424f4882b3d72",
            "owner_id": "862298378590",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-023f38f1e4b7aa573",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00c153cbf9625ea0c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_internet_gateway.base_Igw",
            "module.aws_vpc.aws_vpc.base_vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PrivateRTAssociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00f82e3ed60d21b8c",
            "route_table_id": "rtb-05d77dad8120369ba",
            "subnet_id": "subnet-097a45942d09fb6b2"
          },
          "dependencies": [
            "module.aws_vpc.aws_eip.nat_gateway",
            "module.aws_vpc.aws_nat_gateway.nat_gateway",
            "module.aws_vpc.aws_route_table.PrivateRT",
            "module.aws_vpc.aws_subnet.PrivSubnet1",
            "module.aws_vpc.aws_subnet.PublicSubnet1",
            "module.aws_vpc.aws_vpc.base_vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PrivateRTAssociation1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bb8af0913cadaa00",
            "route_table_id": "rtb-05d77dad8120369ba",
            "subnet_id": "subnet-0fe191c7b0406cc91"
          },
          "dependencies": [
            "module.aws_vpc.aws_eip.nat_gateway",
            "module.aws_vpc.aws_nat_gateway.nat_gateway",
            "module.aws_vpc.aws_route_table.PrivateRT",
            "module.aws_vpc.aws_subnet.PrivSubnet2",
            "module.aws_vpc.aws_subnet.PublicSubnet1",
            "module.aws_vpc.aws_vpc.base_vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PublicRTAssociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01a8e009a8616b0d9",
            "route_table_id": "rtb-0b13424f4882b3d72",
            "subnet_id": "subnet-01351679edd75ae49"
          },
          "dependencies": [
            "module.aws_vpc.aws_internet_gateway.base_Igw",
            "module.aws_vpc.aws_route_table.PublicRT",
            "module.aws_vpc.aws_subnet.PublicSubnet1",
            "module.aws_vpc.aws_vpc.base_vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PublicRTAssociation1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cf04af2c446b6167",
            "route_table_id": "rtb-0b13424f4882b3d72",
            "subnet_id": "subnet-0f421e250d4fe220b"
          },
          "dependencies": [
            "module.aws_vpc.aws_internet_gateway.base_Igw",
            "module.aws_vpc.aws_route_table.PublicRT",
            "module.aws_vpc.aws_subnet.PublicSubnet2",
            "module.aws_vpc.aws_vpc.base_vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PrivSubnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862298378590:subnet/subnet-097a45942d09fb6b2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-097a45942d09fb6b2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "862298378590",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PrivateSubnet1"
            },
            "tags_all": {
              "Name": "PrivateSubnet1"
            },
            "vpc_id": "vpc-00c153cbf9625ea0c"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.base_vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PrivSubnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862298378590:subnet/subnet-0fe191c7b0406cc91",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fe191c7b0406cc91",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "862298378590",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PrivateSubnet2"
            },
            "tags_all": {
              "Name": "PrivateSubnet2"
            },
            "vpc_id": "vpc-00c153cbf9625ea0c"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.base_vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PublicSubnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862298378590:subnet/subnet-01351679edd75ae49",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01351679edd75ae49",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "862298378590",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PublicSubnet1"
            },
            "tags_all": {
              "Name": "PublicSubnet1"
            },
            "vpc_id": "vpc-00c153cbf9625ea0c"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.base_vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PublicSubnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862298378590:subnet/subnet-0f421e250d4fe220b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f421e250d4fe220b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "862298378590",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PublicSubnet2"
            },
            "tags_all": {
              "Name": "PublicSubnet2"
            },
            "vpc_id": "vpc-00c153cbf9625ea0c"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.base_vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "base_vpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862298378590:vpc/vpc-00c153cbf9625ea0c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0642577538f80e246",
            "default_route_table_id": "rtb-0fa3a66fd0fc053af",
            "default_security_group_id": "sg-0adef2ef50d4c168a",
            "dhcp_options_id": "dopt-031486b8d4497d1ff",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00c153cbf9625ea0c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fa3a66fd0fc053af",
            "owner_id": "862298378590",
            "tags": {
              "Name": "base_vpc"
            },
            "tags_all": {
              "Name": "base_vpc"
            }
          }
        }
      ]
    }
  ]
}